--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,11 @@
 Django==6.0.1
+django-bootstrap5==24.3
+Pillow==10.4.0
+python-decouple==3.8
+django-crispy-forms==2.2
+crispy-bootstrap5==0.7
+whitenoise==6.7.0
+gunicorn==23.0.0
+psycopg2-binary==2.9.10
+django-debug-toolbar==4.4.6
+django-extensions==3.2.3
